test/trivial/diten/undefinedVarInClass.good
undefinedVarInClass.chpl:2: error: 'undefined_var' undeclared (first use this function)
